guides and tooltips

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>D3 Graphic</title>
+    <title>D3 Chart - funtion of values - animation - tooltip data - guides</title>
     <link rel="stylesheet" href="_/base.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h2>D3 Graphic</h2>
+        <h2>D3 Chart - function of values - animation - tooltip data - guides</h2>
         <div id="chart"></div>
     </div>
     <script src="_/d3.min.js"></script>
